<resources>
    <!-- starter string resources -->
    <string name="app_name">Loading Status</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">Download Details</string>


    <!-- new string resources -->
    <string name="notification_channel_id">download_status_channel</string>
    <string name="notification_channel_name">Download Status Channel</string>
    <string name="notification_action">Check download status</string>

    <string name="glide_title">Glide - Image Loading Library by Bumptech</string>
    <string name="starter_title">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_title">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="logo_banner">Download Logo</string>
    <string name="download">Download</string>

    <string name="glide">glide</string>
    <string name="starter">starter</string>
    <string name="retrofit">retrofit</string>

    <string name="status_failed">Failed</string>
    <string name="status_success">Success</string>

    <string name="select_file">Please select the file to download</string>
    <string name="no_internet">No internet, please try again later</string>

    <string name="file_title">File name: </string>
    <string name="status">Status: </string>
    <string name="ok">OK</string>
</resources>
