<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/spacing_16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail"
    app:layoutDescription="@xml/detail_motion_scene">

    <TextView
        android:id="@+id/file_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/spacing_16dp"
        android:layout_marginEnd="@dimen/spacing_16dp"
        app:layout_constraintBaseline_toBaselineOf="@id/file_title_value"
        android:text="@string/file_title" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/file_title"
        app:layout_constraintBaseline_toBaselineOf="@id/status_value"
        android:layout_marginTop="@dimen/spacing_16dp"
        android:layout_marginEnd="@dimen/spacing_16dp"
        android:text="@string/status" />

    <TextView
        android:id="@+id/file_title_value"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/spacing_16dp"
        tools:text="@string/glide" />

    <TextView
        android:id="@+id/status_value"
        android:layout_width="@dimen/view_dimen_200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/file_title_value"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_16dp"
        tools:text="@string/status" />

    <Button
        android:id="@+id/detail_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/spacing_16dp"
        android:background="@color/colorAccent"
        android:text="@string/ok"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>